--- a/lib/libcrypto/man/X509_ALGOR_dup.3
+++ b/lib/libcrypto/man/X509_ALGOR_dup.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: X509_ALGOR_dup.3,v 1.19 2023/10/10 13:59:47 tb Exp $
+.\"	$OpenBSD: X509_ALGOR_dup.3,v 1.20 2023/10/11 06:08:57 tb Exp $
 .\"	OpenSSL 4692340e Jun 7 15:49:08 2016 -0400
 .\"
 .\" This file is a derived work.
@@ -66,7 +66,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: October 10 2023 $
+.Dd $Mdocdate: October 11 2023 $
 .Dt X509_ALGOR_DUP 3
 .Os
 .Sh NAME
@@ -208,16 +208,31 @@ is transferred to
 on success.
 .Pp
 .Fn X509_ALGOR_get0
-is the inverse of
-.Fn X509_ALGOR_set0 :
-it returns the algorithm OID in
-.Pf * Fa paobj
-and the associated parameter in
-.Pf * Fa pptype
+returns
+.Fa alg Ns 's
+algorithm OID in
+.Pf * Fa paobj ,
+its parameter type in
+.Pf * Fa pptype ,
+and its parameter value in
+.Pf * Fa ppval .
+Any of
+.Fa paobj ,
+.Fa pptype ,
 and
-.Pf * Fa ppval
-from
-.Fa alg .
+.Fa ppval
+can be
+.Dv NULL .
+If
+.Fa pptype is
+.Dv NULL
+or if
+.Pf * Fa pptype
+is
+.Dv V_ASN1_UNDEF
+then
+.Pf * Fa ppval Ns 's
+value is undefined.
 .Pp
 .Fn X509_ALGOR_set_md
 sets
