--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.401 2023/04/27 05:41:11 jmc Exp $
+.\"	$OpenBSD: pci.4,v 1.402 2023/10/11 12:57:53 stsp Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -31,7 +31,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: April 27 2023 $
+.Dd $Mdocdate: October 11 2023 $
 .Dt PCI 4
 .Os
 .Sh NAME
@@ -198,6 +198,8 @@ Sun Cassini 10/100/1Gb Ethernet device
 DEC/Intel 21140/21142/21143/21145 and clones 10/100 Ethernet device
 .It Xr de 4
 DEC DC21x4x (Tulip) 10/100 Ethernet device
+.It Xr dwqe 4
+Synopsys DesignWare Ethernet Quality-of-Service Controller
 .It Xr em 4
 Intel PRO/1000 10/100/1Gb Ethernet device
 .It Xr ep 4
