--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.402 2023/10/11 12:57:53 stsp Exp $
+.\"	$OpenBSD: pci.4,v 1.403 2023/10/14 06:29:11 jmc Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -31,7 +31,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: October 11 2023 $
+.Dd $Mdocdate: October 14 2023 $
 .Dt PCI 4
 .Os
 .Sh NAME
@@ -317,11 +317,11 @@ Intel PRO/Wireless 2100 IEEE 802.11b wireless network device
 Intel
 PRO/Wireless 2200BG/2225BG/2915ABG IEEE 802.11a/b/g wireless network device
 .It Xr iwn 4
-Intel WiFi Link and Centrino IEEE 802.11a/b/g/n wireless network devices
+Intel WiFi Link and Centrino IEEE 802.11a/b/g/n wireless network device
 .It Xr iwm 4
-Intel 7000/8000/9000 IEEE 802.11a/ac/b/g/n wireless network devices
+Intel 7000/8000/9000 IEEE 802.11a/ac/b/g/n wireless network device
 .It Xr iwx 4
-Intel AX200/AX201/AX210/AX211 IEEE 802.11a/ac/ax/b/g/n wireless network devices
+Intel AX200/AX201/AX210/AX211 IEEE 802.11a/ac/ax/b/g/n wireless network device
 .It Xr malo 4
 Marvell Libertas IEEE 802.11b/g wireless network device
 .It Xr pgt 4
