--- a/lib/libcrypto/man/BN_mod_inverse.3
+++ b/lib/libcrypto/man/BN_mod_inverse.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: BN_mod_inverse.3,v 1.12 2023/10/19 19:17:46 tb Exp $
+.\"	$OpenBSD: BN_mod_inverse.3,v 1.13 2023/10/21 13:53:43 schwarze Exp $
 .\"	OpenSSL b97fdb57 Nov 11 09:33:09 2016 +0100
 .\"
 .\" This file was written by Ulf Moeller <ulf@openssl.org>.
@@ -48,7 +48,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: October 19 2023 $
+.Dd $Mdocdate: October 21 2023 $
 .Dt BN_MOD_INVERSE 3
 .Os
 .Sh NAME
@@ -71,9 +71,9 @@ modulo
 .Fa m
 and places the result in
 .Fa r ,
-so
+so that
 .Fa r
-is such that
+satisfies
 .Li a * r == 1 (mod m) .
 If
 .Fa r
